--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>TU LAM WEB</h1>
     <h2>Sua lan 1</h2>
+    <h3>sua lan 2</h3>
     <script src="main.js"></script>
   </body>
 </html>
