--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>TU LAM WEB</h1>
     <h2>Sua lan 1</h2>
     <h3>sua lan 2</h3>
+    <h4>sua lan 3</h4>
     <script src="main.js"></script>
   </body>
 </html>
