--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web1</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="acsets/css/base.css" />
+    <link rel="stylesheet" href="acsets/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
   </head>
   <body>
-    <h1>TU LAM WEB</h1>
-    <h2>Sua lan 1</h2>
-    <h3>sua lan 2</h3>
-    <h4>sua lan 3</h4>
-    <script src="main.js"></script>
+    <div class="app">
+      <header class="header">
+        <nav class="grid">
+          <nav class="header__navbar">
+            <ul class="header__navbar-list">
+              <li class="header__navbar-item header__navbar-item--separate">
+                Vào cửa hàng trên ứng dụng F8-Shop
+              </li>
+              <li class="header__navbar-item">Kết nối</li>
+            </ul>
+
+            <ul class="header__navbar-list">
+              <li class="header__navbar-item">
+                <a href="" class="header__navbar-item-link">Thông báo</a>
+              </li>
+              <li class="header__navbar-item">
+                <a href="" class="header__navbar-item-link">Trợ giúp</a>
+              </li>
+              <li
+                class="header__navbar-item header__navbar-item__strong header__navbar-item--separate"
+              >
+                Đăng ký
+              </li>
+              <li class="header__navbar-item header__navbar-item__strong">
+                Đăng nhập
+              </li>
+            </ul>
+          </nav>
+        </nav>
+      </header>
+      <div class="header__container"></div>
+      <footer class="header__footer"></footer>
+    </div>
   </body>
 </html>
